# solution/docs/swagger.json
@@ -121,6 +121,17 @@
                     "Campaigns"
                 ],
                 "summary": "Генерация текста рекламы",
+                "parameters": [
+                    {
+                        "description": "Информация для генерации текста",
+                        "name": "data",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/domain.GenerateAdTextRequest"
+                        }
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -678,6 +689,17 @@
             "properties": {
                 "current_date": {
                     "type": "integer"
+                }
+            }
+        },
+        "domain.GenerateAdTextRequest": {
+            "type": "object",
+            "properties": {
+                "ad_title": {
+                    "type": "string"
+                },
+                "advertiser_name": {
+                    "type": "string"
                 }
             }
         },
